--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        #result {
+            color:black;
+            font-size: 100px;
+        }
+        #colorChanger{
+            width: 30vh;
+            height: 30vh;
+            margin-bottom: 100px;
+            margin-top: 100px;
+            margin-left: 10%;
+            background-color: rgb(206, 201, 201);
+            border-radius: 10%; 
+            border: 10px solid black;
+        }
+    </style>
+    <button type="button" id="get-text">Получить текст с сервера</button>
+    <div id="result"></div>
+    <div id="colorChanger"> </div>
+    <button type="button" id="change-color">Change the div's color</button>
     <script src="main.js"> </script>
 </body>
 </html>
